--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.12"
 flask = "^3.0.3"
+gunicorn = "^23.0.0"
 
 
 [tool.poetry.group.dev.dependencies]
