--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 python = "^3.12"
 flask = "^3.0.3"
 gunicorn = "^23.0.0"
+requests = "^2.32.3"
 
 
 [tool.poetry.group.dev.dependencies]
